@@ -1,5 +1,7 @@
 2004-05-25    <chromakode@llama>
 
+	* fgdiag/lib/test.py (Module): Rewrote status implementation.
+
 	* fgdiag/lib/prompts.py (Module): No longer have extra newlines in lists.
 
 2004-05-21    <chromakode@llama>
